# GPU_sizer_for_llm_inference

./: .dockerignore  .gitignore  CLI_cmd.MD  CMD.MD  Dockerfile  Makefile  README.md  app.py  conftest.py  expe.ipynb  kv_cach_calculor_vterminal.py  main.py  pyproject.toml  start.sh  streamlit_app.py  streamlit_app_eng.py  streamlit_app_fr.py
.github/workflows/: ci.yml  deploy.yml
app/: app.py  catalog.py  config.py  core.py  plotting.py  schemas.py  shemas.py  units.py
app/data/: models.json
app/routers/: gpus.py  health.py  kv_cache.py  models.py  plot.py  tokens.py  vllm.py
scripts/: app.py
tests/: test_core.py
ui/: streamlit.py
ui/about/: ctx.md  ctx_concept.md  ctx_tech.md  kv.md  kv_concept.md  kv_tech.md  plot_concept.md  plot_tech.md  vllm.md  vllm_concept.md  vllm_tech.md
