[project]
name = "rtx-llm-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.12"
dependencies = [
    "fastapi>=0.136.3",
    "fastapi-offline>=1.7.6",
    "ipykernel>=7.2.0",
    "kernel>=0.63.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
    "torch>=2.11.0",
    "vllm>=0.22.1",
]
